[#8711] Java 9 version options.compilerArgs and targetCompatibility